--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <body>
     <main>
       <h1>HelloWorld</h1>
-      <div class="masthead">      
+      <div class="masthead">
       </div>
       <div class="details">
         <section>
-          <h2>History</h2> 
+          <h2>History</h2>
           <p>Test programs have always existed in software development, but the tradition of using "Hello, World!" as a test message was influenced by an example program in the 1978 book The C Programming Language. The example was taken from a 1974 Bell Laboratories internal memorandum by Brian Kernighan, one of the co-creators of the Unix operating system.</p>
-         </section>
-         <section class="with-code">
+        </section>
+        <section class="with-code">
           <div class="code-copy">
             <h2>Example</h2>
-            <p>Here is a Javascript example:</p>  
+            <p>Here is a JavaScript example:</p>
           </div>
           <div class="code-html">
-            <code><pre>
-&lt;DOCTYPE HTML&gt;
+            <pre><code>
+&lt;!DOCTYPE HTML&gt;
 &lt;html&gt;
   &lt;body&gt;
     &lt;script&gt;
@@ -32,9 +32,9 @@
     &lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;
-            </pre></code>
+            </code></pre>
           </div>
-         </section>
+        </section>
       </div>
     </main>
     <script src="index.js"></script>
